# samp-custom-loading-screen

./: CMakeLists.txt  README.md
src/: main.cpp
src/Core/: Plugin.cpp  Plugin.h
src/Hooks/: D3D9Hook.cpp  D3D9Hook.h
src/Utils/: Config.cpp  Config.h  DataLoader.cpp  DataLoader.h  ISprite.h  SpriteImpl.h  TextureLoader.cpp  TextureLoader.h
